--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tabler/icons-react": "^3.26.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.0.2",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
