--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "pushhh": "git add . && git commit -m 'done' && git push origin main"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@mantine/core": "^7.15.1",
     "@mantine/hooks": "^7.15.1",
     "@tabler/icons-react": "^3.26.0",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
